# environment-model

./: .clang-format  .clang-tidy  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  commonroad_deps.nix  default.nix  example.py  flake.nix  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  setup_git_hooks.sh  test_requirements.txt
env_model/: CMakeLists.txt
env_model/auxiliaryDefs/: structs.h  types.h  types_and_definitions.h
env_model/geometry/: circle.cpp  circle.h  geometricOperations.cpp  geometricOperations.h  geometric_operations.cpp  geometric_operations.h  rectangle.cpp  rectangle.h  shape.h
env_model/interfaces/commonroad/: CommonRoadFactory.h  CommonRoadFactory2018b.cpp  CommonRoadFactory2018b.h  CommonRoadFactory2020a.cpp  CommonRoadFactory2020a.h  XMLReader.cpp  XMLReader.h  commonroad_factory.h  commonroad_factory_2018b.cpp  commonroad_factory_2018b.h  commonroad_factory_2020a.cpp  commonroad_factory_2020a.h  xml_reader.cpp  xml_reader.h
env_model/interfaces/standalone/: command_line_input.cpp  command_line_input.h  main.cpp
env_model/obstacle/: obstacle.cpp  obstacle.h  obstacle_operations.cpp  obstacle_operations.h  state.cpp  state.h  staticObstacle.h
env_model/predicates/: braking_predicates.cpp  braking_predicates.h  position_predicates.cpp  position_predicates.h
env_model/prediction/: state.cpp  state.h
env_model/roadNetwork/: road_network.cpp  road_network.h
env_model/roadNetwork/lanelet/: lane.cpp  lane.h  lanelet.cpp  lanelet.h  lanelet_operations.cpp  lanelet_operations.h
env_model/roadNetwork/regulatory_elements/: traffic_light.cpp  traffic_light.h  traffic_sign.cpp  traffic_sign.h  traffic_sign_element.cpp
env_model/road_network/: road_network.cpp  road_network.h
env_model/road_network/intersection/: incoming.cpp  incoming.h  intersection.cpp  intersection.h
env_model/road_network/lanelet/: lane.cpp  lane.h  lanelet.cpp  lanelet.h  lanelet_operations.cpp  lanelet_operations.h
env_model/road_network/regulatory_elements/: stop_line.cpp  stop_line.h  traffic_light.cpp  traffic_light.h  traffic_sign.cpp  traffic_sign.h  traffic_sign_element.cpp  traffic_sign_element.h
example/: CMakeLists.txt  predicate_satisfaction.csv
example/src/: command_line_input.cpp  command_line_input.h  main.cpp  predicate_manager.cpp  predicate_manager.h
src/: CMakeLists.txt  config.yaml  predicate_instantiation.cpp.inc.in  predicate_map.cpp.in  predicates.cmake  world.cpp  world.h
src/auxiliaryDefs/: structs.h  types_and_definitions.h
src/bindings/: python_interface.cpp  python_interface_core.cpp  python_interface_core.h  python_interface_predicates.cpp  python_interface_predicates.h  translate_python_types.cpp  translate_python_types.h
src/commonroad_cpp/: commonroad_container.cpp  commonroad_container.h  config.yaml  default_config.yaml  world.cpp  world.h
src/commonroad_cpp/auxiliaryDefs/: regulatory_elements.cpp  regulatory_elements.h  structs.h  timer.cpp  timer.h  traffic_signs.cpp  traffic_signs.h  types_and_definitions.h
src/commonroad_cpp/geometry/: circle.cpp  circle.h  curvilinear_coordinate_system.cpp  geometric_operations.cpp  geometric_operations.h  rectangle.cpp  rectangle.h  segment.cpp  shape.h  types.h  util.cpp
src/commonroad_cpp/lanePredicates/: commonroad_lane.cpp
src/commonroad_cpp/obstacle/: initial_state.cpp  kinematic_parameters.h  obstacle.cpp  obstacle.h  obstacle_operations.cpp  obstacle_operations.h  obstacle_reference.cpp  occupancy.cpp  sensor_parameters.h  signal_state.cpp  state.cpp  state.h  state_meta_info.cpp  time_parameters.cpp
src/commonroad_cpp/predicates/: commonroad_predicate.cpp  commonroad_predicate.h  predicate.cpp  predicate.h  predicate_config.cpp  predicate_config.h  predicate_evaluation.cpp  predicate_evaluation.h  predicate_manager.cpp  predicate_manager.h  predicate_parameter.cpp  predicate_parameter_collection.cpp  predicate_parameters.cpp  predicate_parameters.h  predicate_satisfaction.csv  predicate_satisfaction.txt  readme.md
src/commonroad_cpp/roadNetwork/: road_network.cpp  road_network.h  road_network_config.cpp
src/geometry/: circle.cpp  circle.h  geometric_operations.cpp  geometric_operations.h  rectangle.cpp  rectangle.h  shape.h
src/interfaces/commonroad/: commonroad_factory.h  commonroad_factory_2018b.cpp  commonroad_factory_2018b.h  commonroad_factory_2020a.cpp  xml_reader.cpp  (+2 more)
src/obstacle/: obstacle.cpp  obstacle.h  obstacle_operations.cpp  obstacle_operations.h  state.cpp  state.h
src/predicates/: braking_predicates.cpp  braking_predicates.h  general_predicates.cpp  in_front_of_predicate.cpp  in_front_of_predicate.h  in_same_lane_predicate.cpp  in_same_lane_predicate.h  position_predicates.cpp  position_predicates.h  predicate.cpp  predicate.h  predicate_evaluation.cpp  predicate_evaluation.h  predicates.cpp  predicates.h  road_network_predicates.cpp  safe_distance_predicate.cpp  safe_distance_predicate.h  velocity_predicates.cpp
src/roadNetwork/: road_network.cpp  road_network.h
tests/: CMakeLists.txt  allTests.cpp
tests/commonroad_cpp_tests/: test_commonroad_container.cpp  test_commonroad_container.h  test_config.yaml  test_planning_problem.cpp  test_planning_problem.h  test_world.cpp  test_world.h
tests/envModelTests/: allTests.cpp  test_world.cpp  test_world.h
tests/predicateTest/: test_safe_distance_predicate.cpp  test_safe_distance_predicate.h
tests/python/: test_interface.py
tests/scenarios/: ARG_Carcarana-6_5_T-1.xml  DEU_CornerWith180Degree-1_1_T-1.xml  DEU_Crosswalk-1_1_T-1.xml  DEU_IncomingTest-1_1_T-1.xml  DEU_Muc-2_1_T-1.xml  DEU_TrafficLightTest-1_1_T-1.xml  DEU_TwoLanesWithDifferentOrientation-1_1_T-1.xml  DEU_corner_with_180_degree.xml  DEU_incomingTest-1_1.xml  DEU_incoming_test.xml  DEU_test_consider_entering_vehicles_for_lane_change.xml  DEU_two_lanes_with_different_orientation.xml  ESP_Almansa-2_2_T-1.xml  USA_Lanker-1_1_S-1.xml  USA_Lanker-1_1_T-1.xml  USA_Peach-2_1_T-1.xml  USA_Peach-4_1_T-1.xml  ZAM_Urban-2_1_T-1.xml
tests/testScenarios/: DEU_base_intersection.xml
(+1313 files in other folders)
