[project]
name = "commonroad_cpp"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {file = "LICENSE"}
authors = [
  {email = "sebastian.maierhofer@tum.de"},
  {name = "Sebastian Maierhofer"}
]
description = "CommonRoad C++ Environment Model"
dependencies = [ "commonroad-io @ git+https://github.com/commonroad/commonroad-io@release-2024-1"]

[project.optional-dependencies]
test = [
   "numpy>=1.20.0",
   "pytest>=5.3.2"
]
docs = [
   "sphinx~=5.2.3",
   "sphinx-pyproject~=0.1.0"
]

[build-system]
requires = [
    "scikit-build-core~=0.6.0",
    "pybind11~=2.11.1",
    "setuptools_scm[toml]~=7.1.0"
    ]
build-backend = "scikit_build_core.build"

[tool.setuptools_scm]
write_to = "src/python/crcpp/_version.py"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/python/crcpp/_version.py"]

wheel.packages = []
build-dir = "build/{wheel_tag}"


[tool.sphinx-pyproject]
language = "en"

[tool.cibuildwheel]
# Skip PyPy
skip = "pp*"
archs = ["auto"]
environment = { PIP_DISABLE_PIP_VERSION_CHECK="1" }
#build-verbosity = 1

# Skip tests on musllinux due to missing wheels
test-skip = "*i686 *-musllinux*"
test-extras = ["test"]
test-command = "python -m pytest {package}/tests/python"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

# macOS 10.14 is required for full C++17 support
environment = {MACOSX_DEPLOYMENT_TARGET=10.14}
