[project]
name = "commonroad_cpp"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = {file = "LICENSE"}
authors = [
  {email = "sebastian.maierhofer@tum.de"},
  {name = "Sebastian Maierhofer"}
]
description = "CommonRoad C++ Environment Model"
dependencies = [ "commonroad-io @ git+https://github.com/commonroad/commonroad-io@feature/new-format"]

[project.optional-dependencies]
test = [
   "numpy>=1.20.0",
   "pytest>=5.3.2"
]
docs = [
   "mkdocs~=1.6.1",
   "mkdocs-material~=9.5.42",
   "mkdoxy~=1.2.4"
]

[build-system]
requires = [
    "scikit-build-core~=0.11.0",
    "nanobind~=2.2.0",
    "setuptools_scm[toml]~=8.0.3"
    ]
build-backend = "scikit_build_core.build"

[tool.setuptools_scm]
write_to = "src/python/crcpp/_version.py"

[tool.scikit-build]
minimum-version = "0.10"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/python/crcpp/_version.py"]
wheel.packages = ["src/python/crcpp"]
build-dir = "build-python/{build_type}-{wheel_tag}"
cmake.version = ">=3.24"
install.components = ["PythonModules"]
editable.rebuild = true

[tool.scikit-build.cmake.define]
ENV_MODEL_BUILD_PYTHON_BINDINGS = "ON"

[tool.sphinx-pyproject]
language = "en"

[tool.cibuildwheel]
skip = ["pp*", "*i686, *-musllinux*"]
archs = ["auto"]
environment = { PIP_DISABLE_PIP_VERSION_CHECK="1" } # Disable pip warning about newer versions being available
build-verbosity = 1
test-skip = ["pp*", "*i686, *-musllinux*"] # Skip tests on musllinux due to missing wheels
test-extras = ["test"]
test-command = "python -m pytest {package}/tests/python"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = {MACOSX_DEPLOYMENT_TARGET=10.15} # macOS 10.15 for directory_iterator and C++17 support (macOS 10.14)

[tool.ruff]
line-length = 120
indent-width = 4
format.quote-style = "double"
target-version = "py311"
lint.ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
